# com.webos.service.storageaccess

./: CMakeLists.txt  README.md  oss-pkg-info.yaml
files/sysbus/: com.webos.service.storageaccess.api.json.in  com.webos.service.storageaccess.groups.json  com.webos.service.storageaccess.perm.json.in  com.webos.service.storageaccess.role.json.in  com.webos.service.storageaccess.service.in
files/systemd/: com.webos.service.storageaccess.service.in
patch/: 0001-LibGDrive-changes-for-SAF.patch
src/: main.cpp
src/core/: DocumentProviderFactory.cpp  DocumentProviderManager.cpp  SAFManager.cpp  StatusHandler.cpp
src/include/: ClientWatch.h  DocumentProvider.h  DocumentProviderFactory.h  DocumentProviderManager.h  SAFErrors.h  SAFLog.h  SAFLunaService.h  SAFLunaUtils.h  SAFManager.h  SA_Common.h  StatusHandler.h  StatusObserver.h  USBJsonParser.h
src/include/libgssdp/: gssdp-enums.h
src/include/libgupnp/: gupnp-enums.h
src/luna/: SAFLunaService.cpp
src/providers/GDrive/: GDriveProvider.cpp  GDriveProvider.h  GDriveProviderFactory.cpp  GDriveProviderFactory.h
src/providers/USB/: USBStorageProvider.cpp  USBStorageProvider.h  USBStorageProviderFactory.cpp  USBStorageProviderFactory.h
src/providers/gdrive/: GDriveOperation.cpp  GDriveOperation.h  GDriveProvider.cpp  GDriveProvider.h  GDriveProviderFactory.cpp  GDriveProviderFactory.h
src/providers/gdrive/include/common/: all.hpp  logging.hpp  loggingv2.hpp  misc.hpp  path.hpp  property.hpp  queue.hpp  threading.hpp  threadpool.hpp  timer.hpp  varstring.hpp
src/providers/gdrive/include/gdrive/: config.hpp  credential.hpp  drive.hpp  error.hpp  filecontent.hpp  gdrive.hpp  gitem.hpp  oauth.hpp  request.hpp  servicerequest.hpp  store.hpp  util.hpp
src/providers/gdrive/include/jconer/: allocator.hpp  arena.hpp  dump.hpp  error.hpp  json.hpp  (+6 more)
src/providers/internal/: InternalOperationHandler.cpp  InternalOperationHandler.h  InternalStorageProvider.cpp  InternalStorageProvider.h  InternalStorageProviderFactory.cpp  InternalStorageProviderFactory.h
src/providers/network/: NetworkProvider.cpp  NetworkProvider.h  NetworkProviderFactory.cpp  NetworkProviderFactory.h
src/providers/upnp/: UpnpDiscover.cpp  UpnpDiscover.h  UpnpOperation.cpp  UpnpOperation.h  XmlHandler.cpp  XmlHandler.h
src/providers/usb/: USBErrors.h  USBErros.cpp  USBJsonParser.cpp  USBOperationHandler.cpp  USBOperationHandler.h  USBStorageProvider.cpp  USBStorageProvider.h  USBStorageProviderFactory.cpp  USBStorageProviderFactory.h
src/utils/: ClientWatch.cpp  CurlClient.cpp  CurlClient.h  CurlConstants.h  CurlErrorCode.h  SAFErros.cpp  SAFLog.cpp  SAFUtilityOperation.cpp  SAFUtilityOperation.h
(+10 files in other folders)
